--- a/Deliver/templates/customer/order.html
+++ b/Deliver/templates/customer/order.html
@@ -151,7 +151,7 @@
                         </div>
                     </div>
                 </div>
-                <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#submitModal">
+                <button type="button" class="btn btn-dark float-right" data-toggle="modal" data-target="#submitModal">
                   Submit Order!
                 </button>
                 
