--- a/Deliver/templates/restarent/login.html
+++ b/Deliver/templates/restarent/login.html
@@ -25,6 +25,7 @@
     </form>
 </body>
 </html>
-    <p>Don't have an account? <a href="{% url 'register_re' %}">Register</a></p>
+    <p>Don't have an account? <a href="{% url 'register_re' %}">Register</a> <a href="/">Home</a></p>
+   
 </div>
 </center> 
