--- a/Deliver/templates/customer/footer.html
+++ b/Deliver/templates/customer/footer.html
@@ -1,6 +1,6 @@
 <footer class="page-footer font-small indigo fixed-bottom">
     <div class="footer-copyright text-center py-3">&copy; 2023 Copyright:
         
-       <a href="{% url 're_login' %}">restarent login</a>
+       <a href="{% url 're_login' %}">Restaurant login</a>
     </div>
 </footer>
