--- a/Deliver/templates/restarent/home.html
+++ b/Deliver/templates/restarent/home.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <h1>Dashboard</h1>
-    <a  href="{% url 'logout' %}"  > Logout</a>
+    <a  href="{% url 'logout' %}"  > Logout</a> <a  href="/"  > Home</a>
   
         <table>
             <thead>
