--- a/Deliver/templates/restarent/home.html
+++ b/Deliver/templates/restarent/home.html
@@ -51,7 +51,7 @@
           {% else %}
           <td class="class_a"> <img class="img_cust" src="https://www.svgrepo.com/show/15370/correct.svg" alt="img"></td>
           {% endif %}
-          <td> <a href="{% url 'delete' item.id %}">Delete</a></td>
+          <td > <a  href="{% url 'delete' item.id %}"><img class="img_cust" src="https://cdn-icons-png.flaticon.com/128/6861/6861362.png" alt="img"></a></td> 
         </tr>
         {% endfor %}
         </ul>
